authGrant is "done" (modulo whether or not it actually works...).

--- a/TODO
+++ b/TODO
@@ -5,4 +5,4 @@
 *Investigate NOT writing JSON instances explicitely for simple lists of instances (where am I doing this?).
 *Seriously rethink design of Balance(s)...
 *Divide into slightly smaller sub-modules.
-
+*Verify whether I am allowed to use text from BitX in docs...
