First stab at adding figuring out unit tests...

--- a/TODO
+++ b/TODO
@@ -5,3 +5,4 @@
 *Seriously rethink design of Balance(s)...
 *Divide into slightly smaller sub-modules.
 *Verify whether I am allowed to use text from BitX in docs...
+*Test all conversions.
