--- a/TODO
+++ b/TODO
@@ -6,3 +6,4 @@
 *Divide into slightly smaller sub-modules.
 *Verify whether I am allowed to use text from BitX in docs...
 *Test all conversions.
+*Rather than have records with a single list, I should decode to list (similar to OrderID).
