--- a/TODO
+++ b/TODO
@@ -3,3 +3,7 @@
 *Verify whether I am allowed to use text from BitX in docs...
 *Test all conversions.
 *Verify whether AuthGrant could return a BitXError.
+*Investigate the issue with Aeson failing when the API returns a null instead of an array.
+*Why does stopOrder not work?
+*Ask BitX aupport about "withdrawals/" working but not "withdrawals", in getWithDrawalRequests.
+*Maybe rethink this whole RequestStatus_ mess...
