--- a/TODO
+++ b/TODO
@@ -7,3 +7,5 @@
 *Why does stopOrder not work?
 *Ask BitX aupport about "withdrawals/" working but not "withdrawals", in getWithDrawalRequests.
 *Maybe rethink this whole RequestStatus_ mess...
+*Find out why calling cancelWithdrawalRequest only causes an internal server error during testing.
+*Find out why getTransactions fails.
