--- a/TODO
+++ b/TODO
@@ -4,7 +4,9 @@
 *Test all conversions.
 *Verify whether AuthGrant could return a BitXError.
 *Investigate the issue with Aeson failing when the API returns a null instead of an array.
-*Ask BitX aupport about "withdrawals/" working but not "withdrawals", in getWithDrawalRequests.
+*Ask BitX support about "withdrawals/" working but not "withdrawals", in getWithDrawalRequests.
 *Maybe rethink this whole RequestStatus_ mess...
-*Find out why calling cancelWithdrawalRequest only causes an internal server error during testing.
+*Find out why calling cancelWithdrawalRequest causes an internal server error during testing.
 *Ask BitX support about error wrt docs for pending transactions call.
+*Test Auth by request app id from BitX as stipulated in docs.
+*Should i even bother including auth module?
