--- a/TODO
+++ b/TODO
@@ -3,3 +3,5 @@
 *Investigate the issue with Aeson failing when the API returns a null instead of an array.
 *Maybe rethink this whole RequestStatus_ mess...
 *Find out why calling cancelWithdrawalRequest causes an internal server error during testing.
+*Investigate doing a private test suite (with creds ignored in .gitignore).
+
