--- a/TODO
+++ b/TODO
@@ -4,4 +4,5 @@
 *Maybe rethink this whole RequestStatus_ mess...
 *Find out why calling cancelWithdrawalRequest causes an internal server error during testing.
 *Investigate doing a private test suite (with creds ignored in .gitignore).
+*Think about using the new Record package?
 
