--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,5 @@
 v0.3.0.0
-* Replaced Volkov records with lenses
+* Replaced Volkov records with (micro)lenses
 
 v0.2.0.0
 * Replaced Decimal with Scientific. BREAKING CHANGE.
