--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+v0.7.0.0
+* Added new "since" option to public trades' endpoint. BREAKING CHANGE.
+* Added is_buy field for trade record.
+* Added Indonesian Rupiah.
+
 v0.6.0.0
 * Added the new endpoint for creating market (spot) orders.
 * Replaced http-conduit with http-client and http-client-tls.
@@ -5,8 +10,6 @@ v0.6.0.0
 
 v0.5.0.1
 * A few more major bugfixes w.r.t. to BitX number formatting.
-
-v0.5.0.1
 * Fixed issue due to BitX's handling of ints as decimal.
 
 v0.5.0.0
