Ticker Ask, Bid, and Last_trade should be Maybe types.

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 v0.8.0.0
 * Added Singapore Dollar.
 * The UnparseableResponse now provides the Aeson error. BREAKING CHANGE.
+* Last_trade and Bid and Ask prices don't always appear in the Ticker type. BREAKING CHANGE.
 * GHC 8.0 is now officially supported.
 
 v0.7.0.2
