--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+v0.9.0.1
+* Compatibility with http-client-0.5.0 and http-client-tls-0.3.0.
+
 v0.9.0.0
 * The BitXAuth type can now be written as a string using the OverloadedStrings extension.
 
